# catog-automation

./: AI_AGENT_SYSTEM_README.md  AI_AGENT_TESTING_GUIDE.md  AUTOMATION_AGENT_QUICK_START.md  AUTOMATION_AGENT_README.md  CODEX_INTEGRATION_SUMMARY.md  Install Omni Parser in AMD GPU.md  LICENSE  PLATFORM_TEST_SCRIPTS.md  README.md  TOOLS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-agent-tools.html
.claude/: settings.local.json
.github/workflows/: release.yml
Selfevolving/: README.md  code-catog-automation-self-learning-self-evolving-logging-improve.md
src/: automation-agent.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_tools.rs  automation_agent.rs  contracts.rs  desktop_automation.rs  file_ops.rs  file_ops_tests.rs  lib.rs  main.rs  mcp_servers.rs  orchestrator.rs  terminal.rs  terminal_exec.rs  windows_agent.rs
src-tauri/src/ai_agent/: app_controller.rs  config.rs  errors.rs  input_simulator.rs  learning_system.rs  mod.rs  nlp_parser.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs  security.rs  traits.rs  types.rs  ui_detector.rs  window_manager.rs
